# ComputingForDataScienceHW4

./: .gitignore  README.md  hw4.py  main.py  pyproject.toml
diabetes_project/: main.py  pyproject.toml  run_pipeline.ipynb
diabetes_project/diabetes_library/: modeling.py
